# Artifact

./: .clinerules  .gitignore  AbstractAssetFile.cpp.ifc.dt.d.json  AbstractAssetFile.cpp.ifc.dt.module.json  AbstractAssetFile.cpp.ifc.dt.module.json.command  AbstractAssetFile.hpp_A004FCBFA6C088D7.ifc.dt.d.json  AbstractAssetFile.hpp_A004FCBFA6C088D7.ifc.dt.module.json  AbstractAssetFile.hpp_A004FCBFA6C088D7.ifc.dt.module.json.command  AbstractDecoder.cpp.ifc.dt.d.json  AbstractDecoder.cpp.ifc.dt.module.json  AbstractDecoder.cpp.ifc.dt.module.json.command  AbstractDecoder.ixx.ifc.dt.module.json.command  AbstractEncoder.cpp.ifc.dt.d.json  AbstractEncoder.cpp.ifc.dt.module.json  AbstractEncoder.cpp.ifc.dt.module.json.command  AbstractEncoder.ixx.ifc.dt.d.json  AbstractEncoder.ixx.ifc.dt.module.json  AbstractEncoder.ixx.ifc.dt.module.json.command  AbstractImageGenerator.hpp_313538D9E4056F03.ifc.dt.d.json  AbstractImageGenerator.hpp_313538D9E4056F03.ifc.dt.module.json  AbstractImageGenerator.hpp_313538D9E4056F03.ifc.dt.module.json.command  AbstractImageProcessing.cpp.ifc.dt.d.json  AbstractImageProcessing.cpp.ifc.dt.module.json  AbstractImageProcessing.cpp.ifc.dt.module.json.command  AbstractImageProcessing.hpp_EDF215B9931B4DCD.ifc.dt.d.json  AbstractImageProcessing.hpp_EDF215B9931B4DCD.ifc.dt.module.json  AbstractImageProcessing.hpp_EDF215B9931B4DCD.ifc.dt.module.json.command  AbstractKnob.hpp_4E877739800FF185.ifc.dt.d.json  AbstractKnob.hpp_4E877739800FF185.ifc.dt.module.json  AbstractKnob.hpp_4E877739800FF185.ifc.dt.module.json.command  Alpha.hpp_D67BC344ED1CD014.ifc.dt.d.json  Alpha.hpp_D67BC344ED1CD014.ifc.dt.module.json  Alpha.hpp_D67BC344ED1CD014.ifc.dt.module.json.command  AnchorPoint.ixx.ifc.dt.d.json  AnchorPoint.ixx.ifc.dt.module.json  AnchorPoint.ixx.ifc.dt.module.json.command  AnchorPoint2D.ixx.ifc.dt.d.json  AnchorPoint2D.ixx.ifc.dt.module.json  AnchorPoint2D.ixx.ifc.dt.module.json.command  Artifact.qtvscr  (+587 more)
.github/: copilot-instructions.md
App/: Basic2DImagePS.cso  BoxBlur5x5.cso  CS_BlendAdd.cso  CS_BlendNormal.cso  CS_BlendOverlay.cso  CS_BlendScreen.cso  CS_BlendSoftlight.cso  Common2DPS.cso  ElaLog.txt  Glow.cso  Negate.cso  RGBAChannelSwap.cso  Settings.ini  Thresholding.cso  VertexShader.cso  comp1.mov  dark-style.css  line_vs.cso  solidcolor_ps.cso  thick_line_ps.cso  thick_line_vs.cso
App/Icon/: fetch_material_icons.py  icon_list.json
App/shaders/: Shaders_SOURCE.vcxitems  Shaders_SOURCE.vcxitems.filters  TemporalSmearCS.hlsl  blur_radius_float4CS.hlsl  volumetricLight_SpotPS.hlsl
cmake/: CopyQtPlatformPlugin.cmake  CopyVcpkgRuntimeDeps.cmake  RunWindeployqt.cmake
docs/: AI_API_CLOUD_WIDGET_NOTES.md  AI_API_EXTENDED_REFERENCE.md  AssetIcons.md  HYPOTHESIS_RENDER_PASS_OPTIMIZATION_2026-03-28.md  INVESTIGATION_MASK_CHANNEL_ORDER_2026-04-27.md  INVESTIGATION_PROJECT_TREE_FLOATING_RESIZE_2026-03-14.md  INVESTIGATION_QADS_UPSTREAM_COMPARISON_2026-06-23.md  LAYER_CREATION_SPEC_2026-03-15.md  MILESTONE_3D_GIZMO_IMPLEMENTATION_2026-03-25.md  MILESTONE_AI_CLOUD_UI_2026-04-09.md  MILESTONE_AI_CLOUD_WIDGET_HARDENING_2026-04-09.md  MILESTONE_APP_UX_AND_CORE_REFINEMENT_2026-03-17.md  MILESTONE_ARTIFACT_IRENDER_2026-03-12.md  MILESTONE_ASSET_SYSTEM_2026-03-12.md  MILESTONE_AUDIO_BUS_ROUTING_UI_2026-04-09.md  MILESTONE_AUDIO_ENGINE_2026-03.md  MILESTONE_CLONER_GENERATOR_2026-03-17.md  MILESTONE_CLONE_LAYER_CONSOLIDATION_2026-03-30.md  MILESTONE_CLOUD_AI_API_ALL_PHASES_2026-04-26.md  MILESTONE_CLOUD_AI_API_PHASE_1_2026-04-26.md  MILESTONE_CLOUD_AI_PHASE_4_2026-04-27.md  MILESTONE_CLOUD_AI_PHASE_5_2026-04-27.md  MILESTONE_CLOUD_AI_PHASE_6_2026-04-27.md  MILESTONE_CLOUD_AI_PHASE_7_2026-04-27.md  MILESTONE_COMPOSITE_EDITOR_MULTILAYER_ENHANCEMENT_2026-06-16.md  MILESTONE_COMPOSITION_EDITOR_2026-03-21.md  MILESTONE_COMPOSITION_EDITOR_CACHE_SYSTEM_2026-03-26.md  MILESTONE_COMPOSITION_EDITOR_IMPLEMENTATION_RULES_2026-04-13.md  MILESTONE_COMPOSITION_EDITOR_PIE_MENU_2026-03-25.md  MILESTONE_COMPOSITION_MENU_2026-03-13.md  MILESTONE_COMPOSITION_VIEW_FAST_PATH_2026-03-25.md  MILESTONE_CREATIVE_WORKFLOW_REFINEMENT_2026-03-13.md  MILESTONE_DIAGNOSTIC_PHASE_2_2026-04-27.md  MILESTONE_EDITING_READY_CUT_2026-03-12.md  MILESTONE_EDIT_MENU_2026-03-13.md  MILESTONE_FFMPEG_BACKEND_SPLIT_2026-03-20.md  MILESTONE_FFMPEG_BRIDGE_RUNTIME_RESOLUTION_2026-03-25.md  MILESTONE_FILE_MENU_2026-03-13.md  MILESTONE_GPU_DIRECT_TEXT_DRAW_2026-04-14.md  MILESTONE_GPU_DIRECT_TEXT_WP3_PRIMITIVERENDERER_2D_2026-04-27.md  (+43 more)
docs/Notes/: feature-discussion-summary.md  weekly-progress-summary-2026-05-10.md
docs/archived/: MILESTONE_TIMELINE_HEADER_OWNER_DRAW_2026-03-23.md  MILESTONE_TIMELINE_TRANSFORM_KEYFRAME_EDITING_2026-04-12.md
docs/bugs/: BUG_PROPERTY_WIDGET_SELECTION_KEYFRAME_BUTTON_2026-04-20.md
docs/done/: SESSION_WORK_2026-03-26.md
docs/planned/: MILESTONE_MASK_KEYFRAME_FOUNDATION_2026-05-10.md  MILESTONE_MULTI_FRAME_PREVIEW_RENDERING_2026-06-29.md
include/AI/: AIClient.ixx  FileAutomation.ixx  MaterialAutomation.ixx  RenderAutomation.ixx  WorkspaceAutomation.ixx
include/AVSync/: AVSyncBridge.ixx
include/Animation/: ArtifactLayerEffectEnvelope.ixx
include/Application/: ActiveContextService.ixx  (+3 more)
lib/: ArtifactWidgetsdd.exp  Qt6Chartsd.lib  Qt6EntryPointd.lib  Qt6Widgetsd.lib  artifactwidgetd  artifactwidgetd.lib
scripts/: startup.py
shaders/: ShaderInterop_ACES.h  ShaderInterop_Image.h  ShaderInterop_Renderer.h  anime4k_edge_upscaleCS.hlsl  cacaoLiteCS.hlsl  clusteredLightBuildCS.hlsl  clusteredLighting.hlsli  dualKawaseUpsampleCS.hlsl  filmFrameInterpolationCS.hlsl  gaussianBlurHorizontalCS.hlsl  gaussianBlurVerticalCS.hlsl  hdr_output.hlsli  heightFogCS.hlsl  iesLighting.hlsli  lens_distortionCS.hlsl  lightCullingCS.hlsl  liquifyCS.hlsl  pcfShadowResolveCS.hlsl  rayTracingClosestHit.hlsl  rayTracingMinimalPayload.hlsli  rayTracingMiss.hlsl  rgbHsvKeyerCS.hlsl  softBodyUVDeformVS.hlsl  spdSinglePassDownsampleCS.hlsl  sss.hlsli  toonLightingPS.hlsl  volumetricLight_PointPS.hlsl
src/: AppMain.cpp  AppMain.cppm  Test.cppm
translations/: en.json  ja.json  pt.json  zh-TW.json  zh.json
(+1283 files in other folders)
